--- a/.github/workflows/schedule-tweet.yml
+++ b/.github/workflows/schedule-tweet.yml
@@ -2,9 +2,11 @@ name: Schedule Tweet
 
 on:
   schedule:
-    - cron: '0 3 * * *' # 9:00 AM IST (UTC +5:30 → 3:00 AM UTC)
-    - cron: '0 9 * * *' # 3:00 PM IST (UTC +5:30 → 9:00 AM UTC)
-  workflow_dispatch: # Allows manual trigger
+    # 9:00 AM IST (UTC +5:30 → 3:00 AM UTC)
+    - cron: '0 3 * * *' 
+    # 2:30 PM IST (UTC +5:30 → 9:00 AM UTC)
+    - cron: '0 9 * * *' 
+  workflow_dispatch: # Allows you to click "Run workflow" in GitHub Actions tab
 
 jobs:
   tweet:
@@ -16,4 +18,6 @@ jobs:
 
       - name: Trigger tweet endpoint
         run: |
-          curl -X POST https://twitter-bot-smoky.vercel.app/api/tweet
+          curl -X POST https://twitter-bot-smoky.vercel.app/api/tweet \
+          -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}" \
+          -H "Content-Type: application/json"
