Keep remote version of workflow to bypass permission error

--- a/.github/workflows/schedule-tweet.yml
+++ b/.github/workflows/schedule-tweet.yml
@@ -18,4 +18,6 @@ jobs:
 
       - name: Trigger tweet endpoint
         run: |
-          curl -X POST https://twitter-bot-smoky.vercel.app/api/tweet
+          curl -X POST https://twitter-bot-smoky.vercel.app/api/tweet \
+          -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}" \
+          -H "Content-Type: application/json"
