Coderespite bot is live with Gemini 3

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "https://x.com/coderespite",
+      "permanent": false
+    }
+  ],
   "crons": [
     {
       "path": "/api/tweet",
