--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@google/generative-ai": "^0.24.0",
+    "@google/genai": "^1.38.0",
     "dedent": "^1.5.3",
     "dotenv": "^16.6.1",
     "node-fetch": "^3.3.2",
